// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Page 2 1`] = `
<div
  data-size="auto"
  id="main-content"
>
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Prosjektet"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<generated>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="<generated>"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Prosjektet"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2 data-size="sm">
        Prosjektet
      </h2>
      <div>
      </div>
      <ds-field>
        <label for="projectTitle">
          <span>
            Tittel på prosjektet
          </span>
        </label>
        <div>
          <input
            id="projectTitle"
            autocomplete="off"
            required
            type="text"
            name="projectTitle"
          >
        </div>
      </ds-field>
      <ds-field>
        <label for="projectDescription">
          <span>
            Beskrivelse av prosjektet
          </span>
        </label>
        <div>
          <textarea
            id="projectDescription"
            rows="4"
            name="projectDescription"
            autocomplete="off"
            required
            style="<removed>"
          >
          </textarea>
        </div>
      </ds-field>
      <fieldset
        id="projectCategory"
        tabindex="-1"
        aria-labelledby="<generated> <generated>"
      >
        <legend id="<generated>">
          <span>
            Kategori
          </span>
        </legend>
        <p id="<generated>">
          Hvilken kategori hører prosjektet til?
        </p>
        <ds-field data-clickdelegatefor="radio-learning">
          <input
            id="radio-learning"
            required
            type="radio"
            value="Learning"
            name="projectCategory"
          >
          <label
            data-weight="regular"
            for="radio-learning"
          >
            <span>
              Opplæring
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="radio-social">
          <input
            id="radio-social"
            required
            type="radio"
            value="social"
            name="projectCategory"
          >
          <label
            data-weight="regular"
            for="radio-social"
          >
            <span>
              Sosialt
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="radio-activity">
          <input
            id="radio-activity"
            required
            type="radio"
            value="activity"
            name="projectCategory"
          >
          <label
            data-weight="regular"
            for="radio-activity"
          >
            <span>
              Aktivitet
            </span>
          </label>
        </ds-field>
        <details>
          <summary>
            Grunnen til at vi spør om dette
          </summary>
          <div>
            Tilskuddsordningen skal dekke et bredt spekter av tilbud. For å ha oversikt over fordelingen av budsjettposten trenger vi å vite hvilket tilbud det søkes om å utvide.
          </div>
        </details>
      </fieldset>
      <ds-field>
        <label for="county">
          <span>
            Gjennomføringssted
          </span>
        </label>
        <div
          data-field="description"
          id="<generated>"
        >
          Hvilket fylke vil prosjektet gjennomføres i?
        </div>
        <ds-suggestion>
          <input
            placeholder
            autocomplete="off"
            id="county"
            required
            type="text"
            aria-describedby="<generated>"
            list="<generated>"
            popovertarget="<generated>"
          >
          <button
            aria-label="Tøm"
            hidden
            type="reset"
            aria-hidden="false"
            tabindex="-1"
          >
          </button>
          <u-datalist
            data-nofilter
            data-sr-plural="%d forslag"
            data-sr-singular="%d forslag"
            popover="manual"
            role="listbox"
            data-sr-of="of"
            hidden
            tabindex="-1"
            aria-multiselectable="false"
            id="<generated>"
            data-is-floating="true"
          >
            <u-option
              data-empty
              hidden
              label
              value
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Ingen resultater
            </u-option>
            <u-option
              label="Agder"
              value="Agder"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Agder
            </u-option>
            <u-option
              label="Akershus"
              value="Akershus"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Akershus
            </u-option>
            <u-option
              label="Buskerud"
              value="Buskerud"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Buskerud
            </u-option>
            <u-option
              label="Finnmark"
              value="Finnmark"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Finnmark
            </u-option>
            <u-option
              label="Innlandet"
              value="Innlandet"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Innlandet
            </u-option>
            <u-option
              label="Møre og Romsdal"
              value="Møre og Romsdal"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Møre og Romsdal
            </u-option>
            <u-option
              label="Nordland"
              value="Nordland"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Nordland
            </u-option>
            <u-option
              label="Oslo"
              value="Oslo"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Oslo
            </u-option>
            <u-option
              label="Rogaland"
              value="Rogaland"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Rogaland
            </u-option>
            <u-option
              label="Telemark"
              value="Telemark"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Telemark
            </u-option>
            <u-option
              label="Troms"
              value="Troms"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Troms
            </u-option>
            <u-option
              label="Trøndelag"
              value="Trøndelag"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Trøndelag
            </u-option>
            <u-option
              label="Vestfold"
              value="Vestfold"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Vestfold
            </u-option>
            <u-option
              label="Vestland"
              value="Vestland"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Vestland
            </u-option>
            <u-option
              label="Østfold"
              value="Østfold"
              role="option"
              aria-disabled="false"
              aria-selected="false"
              id="<generated>"
            >
              Østfold
            </u-option>
          </u-datalist>
          <select
            name="county"
            hidden
            id="<generated>"
          >
          </select>
        </ds-suggestion>
      </ds-field>
      <ds-field>
        <label for="ageGroup">
          <span>
            Aldersgruppe
          </span>
        </label>
        <div
          data-field="description"
          id="<generated>"
        >
          Hvilken aldersgruppe er prosjektet rettet mot?
        </div>
        <select
          aria-readonly="false"
          id="ageGroup"
          name="ageGroup"
          autocomplete="off"
          required
          aria-describedby="<generated>"
        >
          <option
            value="blank"
            disabled
            selected
          >
            Velg aldersgruppe
          </option>
          <option value="kindergarten">
            3-5 år
          </option>
          <option value="kids">
            6-12 år
          </option>
          <option value="youth">
            13-15 år
          </option>
          <option value="adult">
            16-19 år
          </option>
        </select>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          Neste
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<generated>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 3 1`] = `
<div
  data-size="auto"
  id="main-content"
>
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Dokumentasjon"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<generated>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="<generated>"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Dokumentasjon"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2 data-size="sm">
        Dokumentasjon
      </h2>
      <div>
      </div>
      <div>
        <label
          id="<generated>-label"
          for="<generated>-button"
        >
          <span>
            Last opp dokumentasjon
          </span>
        </label>
        <div
          data-field="description"
          id="<generated>-description"
        >
          Du kan laste opp filer i PDF-format. Filer kan være opptil 25 MB.
        </div>
        <div role="presentation">
          <div>
          </div>
          <button
            data-variant="secondary"
            type="button"
            id="<generated>-button"
            aria-label="Velg filer"
            aria-labelledby="<generated>-label"
            aria-describedby="<generated>-description"
          >
            <svg
              xmlns="http://www.w3.org/2000/svg"
              width="1em"
              height="1em"
              fill="none"
              viewbox="0 0 24 24"
              focusable="false"
              role="img"
              aria-hidden="true"
            >
              <path
                fill="currentColor"
                fill-rule="evenodd"
                d="M6.97 9.03a.75.75 0 0 0 1.06 0l3.22-3.22v8.69a.75.75 0 0 0 1.5 0V5.81l3.22 3.22a.75.75 0 1 0 1.06-1.06l-4.5-4.5a.75.75 0 0 0-1.06 0l-4.5 4.5a.75.75 0 0 0 0 1.06M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                clip-rule="evenodd"
              >
              </path>
            </svg>
          </button>
        </div>
        <input
          accept="application/pdf"
          multiple
          tabindex="-1"
          required
          id="dokumentasjon-dropzone"
          type="file"
          style="<removed>"
        >
      </div>
      <ds-field>
        <label for="addition">
          <span>
            Kommentarer til dokumentasjon
          </span>
        </label>
        <div
          data-field="description"
          id="<generated>"
        >
          Ytterlige kommentarer til dokumentasjonen du har lastet opp.
        </div>
        <textarea
          id="addition"
          name="addition"
          aria-describedby="<generated>"
          style="<removed>"
        >
        </textarea>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          Neste
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<generated>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 4 1`] = `
<div
  data-size="auto"
  id="main-content"
>
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Innsending"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="active"
          data-variant="submission"
          aria-current="step"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<generated>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="<generated>"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Innsending"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="active"
            data-variant="submission"
            aria-current="step"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2>
        Innsending
      </h2>
      <p>
        Send inn søknaden.
      </p>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          type="button"
          style="<removed>"
        >
          Send inn skjema
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              fill-rule="evenodd"
              d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
              clip-rule="evenodd"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<generated>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 5 1`] = `
<div
  data-size="auto"
  id="main-content"
>
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Kvittering"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="active"
          data-variant="confirmation"
          aria-current="step"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<generated>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="<generated>"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Kvittering"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="active"
            data-variant="confirmation"
            aria-current="step"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <div>
        <h2 data-size="sm">
          Kvittering
        </h2>
        <p data-size="xl">
          Takk!
        </p>
        <p>
          Vi har mottatt din søknad. Du hører tilbake innen en måned.
        </p>
      </div>
      <div>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<generated>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Story 1`] = `
<div
  data-size="auto"
  id="main-content"
>
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Kontaktinfo"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<generated>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="<generated>"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Kontaktinfo"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2 data-size="sm">
        Kontaktinfo
      </h2>
      <div>
      </div>
      <ds-field>
        <label for="firstName">
          <span>
            Fornavn
          </span>
        </label>
        <div>
          <input
            id="firstName"
            autocomplete="given-name"
            required
            type="text"
            name="firstName"
          >
        </div>
      </ds-field>
      <ds-field>
        <label for="lastName">
          <span>
            Etternavn
          </span>
        </label>
        <input
          id="lastName"
          required
          autocomplete="family-name"
          type="text"
          name="lastName"
        >
      </ds-field>
      <fieldset
        id="contactMethods"
        tabindex="-1"
        aria-labelledby="<generated> <generated>"
      >
        <legend id="<generated>">
          <span>
            Hvordan ønsker du at vi skal kontakte deg?
          </span>
        </legend>
        <p id="<generated>">
          Velg ett eller flere alternativer
        </p>
        <ds-field data-clickdelegatefor="contactMethodsEmail">
          <input
            id="contactMethodsEmail"
            required
            type="checkbox"
            value="epost"
            name="contactMethods"
          >
          <label
            data-weight="regular"
            for="contactMethodsEmail"
          >
            <span>
              E-post
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="contactMethodsTelefon">
          <input
            id="contactMethodsTelefon"
            required
            type="checkbox"
            value="telefon"
            name="contactMethods"
          >
          <label
            data-weight="regular"
            for="contactMethodsTelefon"
          >
            <span>
              Telefon
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="contactMethodsSms">
          <input
            id="contactMethodsSms"
            required
            type="checkbox"
            value="sms"
            name="contactMethods"
          >
          <label
            data-weight="regular"
            for="contactMethodsSms"
          >
            <span>
              SMS
            </span>
          </label>
        </ds-field>
      </fieldset>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          Neste
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<generated>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;
